syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.proto";
option java_outer_classname = "UserProto";

package proto;

import "google/protobuf/empty.proto";

// User handles commands dispatch
service User {
  rpc DispatchCommand(DispatchCommandRequest) returns (google.protobuf.Empty);
}

// DispatchCommandRequest is passed when dispatching
message DispatchCommandRequest {
  string name = 1;
  bytes payload = 2;
}
